<resources>
    <string name="app_name">Ohm</string>

    <!-- 메인에 사용하는 String -->
    <string name="mainpage_text1">회의 참여</string>
    <string name="mainpage_text2">내 회의</string>
    <string name="reservation_text">회의 예약</string>
    <string name="make_text">회의 생성</string>
    <string name="input_hint">참여코드 입력</string>

    <!-- 카드뷰에 사용하는 String-->
    <string name="card_day">이틀후</string>
    <string name="card_title">회의주제</string>
    <string name="card_desc">날짜입력</string>

    <!-- 대기실에 사용하는 나의 프로필 -->
    <string name="paticipant_name1">나</string>
    <string name="paticipant_name">미림인</string>
    <string name="paticipant_current">대기중</string>

    <!-- 대기실에 사용하는 다른사람의 프로필 -->
    <string name="paticipant_1">미림인</string>
    <string name="paticipant_2">대기중</string>
    <string name="chatting_hint">입력하시오.</string>

    <!-- toolbar에 있는 방 제목 -->
    <string name="chat_title1">2학년 3반 반티</string>

    <!-- 네비게이션바에 나오는 화면-->
    <string name="text_big_title">2학년 3반 반티</string>
    <string name="text_title2">2학년 3반 반티</string>
    <string name="header_main1">참여자 (4)</string>
    <string name="header_main_title2">투표</string>

    <!-- 네비게이션바에 나오는 리스트 중 방장표시 -->
    <string name="paticipant_power">방장</string>
    <string name="timer">00:05:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 페이스북 관련 -->
    <string name="facebook_app_id">323192849161088</string>
    <string name="fb_login_protocol_scheme">fb323192849161088</string>


    <string name="voit_title">2학년 3반의 반티를 뽑아봐요</string>
    <string name="voit_text">2학년 3반의 반티를 뽑아봐요.</string>
    <string name="voit_title1">해리포터 망토</string>
    <string name="voit_title2">이누아샤</string>
    <string name="voit_title3">손오공 밴드 + 헤어밴드</string>
    <string name="voit_button">투표하기</string>
    <string name="voit_main_title1">해리포터 망토</string>
    <string name="voit_main_title2">이누아샤</string>
    <string name="voit_main_title3">손오공 밴드 + 헤어밴드</string>
    <string name="voit_main_plus">항목 추가</string>
    <string name="voit_main_btn">저장하고 나가기</string>
    <string name="voit_main_title1_1">투표 제목을 입력하세요</string>
    <string name="voit_main_title">항목을 입력해주세요.</string>
    <string name="welcome">옴에 오신 것을 환영합니다.</string>


</resources>