<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="21dp"
    android:paddingTop="16dp"
    android:paddingRight="21dp">

    <TextView
        android:id="@+id/text_big_title"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_big_title"
        android:textColor="#1D1D1D"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_title2"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_big_title" />

    <TextView
        android:id="@+id/header_main_title1"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="53dp"
        android:text="@string/header_main1"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="352dp"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/participant_list_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_main_title1">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/paticipant_item" />
    </LinearLayout>

    <TextView
        android:id="@+id/header_main_title2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="38dp"
        android:text="@string/header_main_title2"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/voit_background"
        android:layout_width="369dp"
        android:layout_height="214dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_main_title2"
        app:srcCompat="@drawable/main_background" />

    <TextView
        android:id="@+id/voit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:text="@string/voit_text"
        app:layout_constraintEnd_toEndOf="@+id/voit_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/voit_background"
        app:layout_constraintTop_toTopOf="@+id/voit_background" />

    <RadioGroup
        android:layout_width="340dp"
        android:layout_height="148dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="@+id/voit_background"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="@+id/voit_background"
        app:layout_constraintTop_toBottomOf="@+id/voit_title">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/chatting_background"
            android:text="@string/voit_title1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/chatting_background"
            android:text="@string/voit_title2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/chatting_background"
            android:text="@string/voit_title3" />
    </RadioGroup>

    <Button
        android:id="@+id/voit_button"
        android:layout_width="189dp"
        android:layout_height="35dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/voit_button"
        android:text="@string/voit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/voit_background" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="23dp"
        android:layout_height="26dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_background"
        app:srcCompat="@drawable/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>