<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@drawable/participant_item_bg">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ProfileImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/main_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BadgeMe"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_darkblue"
        android:gravity="center"
        android:text="@string/paticipant_name1"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="6sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ProfileImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:gravity="clip_vertical"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/paticipant_name"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BadgeMe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/State"
        android:layout_width="26dp"
        android:layout_height="11dp"
        android:layout_marginEnd="17dp"
        android:text="@string/paticipant_power"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>