<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/quit_btn"
        android:layout_width="@dimen/dp14"
        android:layout_height="@dimen/dp14"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp312"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_quit" />

    <EditText
        android:id="@+id/voit_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp80"
        android:layout_marginEnd="@dimen/dp44"
        android:text="@string/voit_main_title1_1"
        android:background="@null"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/voit_main1"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main_title"
        app:srcCompat="@drawable/line" />

    <EditText
        android:id="@+id/voit_confirm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp175"
        android:background="@drawable/line"
        android:text="@string/voit_main_title"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/voit_main1"
        app:layout_constraintTop_toTopOf="@+id/voit_main1" />

    <ImageView
        android:id="@+id/voit_main2"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp13"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main1"
        app:srcCompat="@drawable/line" />

    <EditText
        android:id="@+id/voit_confirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp175"
        android:background="@drawable/line"
        android:text="@string/voit_main_title"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/voit_main2"
        app:layout_constraintTop_toTopOf="@+id/voit_main2" />

    <ImageView
        android:id="@+id/voit_main4"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp13"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main2"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/voit_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp6"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp224"
        android:background="@drawable/line"
        android:text="@string/voit_main_plus"
        android:textColor="#000000"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main4"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/voit_main4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp18"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintStart_toStartOf="@+id/voit_main4"
        app:layout_constraintTop_toTopOf="@+id/voit_main4"
        app:srcCompat="@drawable/plus" />

    <Button
        android:id="@+id/goto_save1"
        android:layout_width="@dimen/dp273"
        android:layout_height="@dimen/dp53"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/dp49"
        android:background="@drawable/btn_darkblue"
        android:text="@string/voit_main_btn"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp13"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main4" />
</androidx.constraintlayout.widget.ConstraintLayout>