<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/quit_btn"
        android:layout_width="@dimen/dp14"
        android:layout_height="@dimen/dp14"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp312"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_quit" />

    <TextView
        android:id="@+id/voit_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp80"
        android:layout_marginEnd="@dimen/dp44"
        android:text="@string/voit_title"
        android:textColor="#000000"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/voit_main1"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main_title"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/voit_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="@dimen/dp175"
        android:background="@drawable/line"
        android:text="@string/voit_main_title1"
        android:textColor="#000000"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main1"
        app:layout_constraintStart_toStartOf="@+id/voit_main1"
        app:layout_constraintTop_toBottomOf="@+id/voit_main_title" />

    <ImageButton
        android:id="@+id/voit_title1_btn"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp13"
        android:layout_marginStart="@dimen/dp151"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginEnd="@dimen/dp14"
        app:layout_constraintEnd_toEndOf="@+id/voit_main1"
        app:layout_constraintStart_toEndOf="@+id/voit_title_1"
        app:layout_constraintTop_toTopOf="@+id/voit_main1"
        app:srcCompat="@drawable/ic_quit" />

    <TextView
        android:id="@+id/voit_main_delate1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp9"
        android:layout_marginStart="@dimen/dp151"
        android:layout_marginEnd="@dimen/dp14"
        android:text="삭제"
        android:textColor="#000000"
        android:textSize="@dimen/sp6"
        app:layout_constraintEnd_toEndOf="@+id/voit_main1"
        app:layout_constraintStart_toEndOf="@+id/voit_title_1"
        app:layout_constraintTop_toBottomOf="@+id/voit_title1_btn" />

    <ImageView
        android:id="@+id/voit_main2"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp13"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main1"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/voit_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp175"
        android:background="@drawable/line"
        android:text="@string/voit_main_title2"
        android:textColor="#000000"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/voit_main2"
        app:layout_constraintTop_toTopOf="@+id/voit_main2" />

    <ImageButton
        android:id="@+id/voit_title1_btn2"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp13"
        android:layout_marginStart="@dimen/dp151"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toEndOf="@+id/voit_title_2"
        app:layout_constraintTop_toTopOf="@+id/voit_main2"
        app:srcCompat="@drawable/ic_quit" />

    <TextView
        android:id="@+id/voit_main_delate2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp9"
        android:layout_marginStart="@dimen/dp151"
        android:layout_marginTop="@dimen/dp1"
        android:text="삭제"
        android:textColor="#000000"
        android:textSize="@dimen/sp6"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/voit_title_2"
        app:layout_constraintTop_toBottomOf="@+id/voit_title1_btn2" />

    <ImageView
        android:id="@+id/voit_main3"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp13"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main2"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/voit_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp175"
        android:background="@drawable/line"
        android:text="@string/voit_main_title3"
        android:textColor="#000000"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/voit_main3"
        app:layout_constraintTop_toTopOf="@+id/voit_main3" />

    <ImageButton
        android:id="@+id/voit_title1_btn3"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp13"
        android:layout_marginStart="@dimen/dp151"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toEndOf="@+id/voit_title_2"
        app:layout_constraintTop_toTopOf="@+id/voit_main3"
        app:srcCompat="@drawable/ic_quit" />

    <TextView
        android:id="@+id/voit_main_delate3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp9"
        android:layout_marginStart="@dimen/dp151"
        android:layout_marginTop="@dimen/dp1"
        android:text="삭제"
        android:textColor="#000000"
        android:textSize="@dimen/sp6"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/voit_title_2"
        app:layout_constraintTop_toBottomOf="@+id/voit_title1_btn3" />

    <ImageView
        android:id="@+id/voit_main4"
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp47"
        android:layout_marginTop="@dimen/dp13"
        android:layout_marginEnd="@dimen/dp44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main3"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/voit_title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp6"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp224"
        android:background="@drawable/line"
        android:text="@string/voit_main_plus"
        android:textColor="#000000"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/voit_main4"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/voit_main4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp18"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintStart_toStartOf="@+id/voit_main4"
        app:layout_constraintTop_toTopOf="@+id/voit_main4"
        app:srcCompat="@drawable/plus" />

    <Button
        android:id="@+id/goto_save"
        android:layout_width="@dimen/dp260"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/dp46"
        android:background="@drawable/btn_darkblue"
        android:text="@string/voit_main_btn"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp13"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main4" />


</androidx.constraintlayout.widget.ConstraintLayout>