<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/quit_btn"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="312dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_quit" />

    <EditText
        android:id="@+id/voit_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="44dp"
        android:text="@string/voit_main_title1_1"
        android:background="@null"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/voit_main1"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main_title"
        app:srcCompat="@drawable/line" />

    <EditText
        android:id="@+id/voit_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="175dp"
        android:background="@drawable/line"
        android:text="@string/voit_main_title"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/voit_main1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/voit_main1"
        app:layout_constraintTop_toTopOf="@+id/voit_main1" />

    <ImageView
        android:id="@+id/voit_main2"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main1"
        app:srcCompat="@drawable/line" />

    <EditText
        android:id="@+id/voit_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="175dp"
        android:background="@drawable/line"
        android:text="@string/voit_main_title"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/voit_main2"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/voit_main2"
        app:layout_constraintTop_toTopOf="@+id/voit_main2" />

    <ImageView
        android:id="@+id/voit_main4"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main2"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/voit_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="224dp"
        android:background="@drawable/line"
        android:text="@string/voit_main_plus"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/voit_main4"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/voit_main4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/voit_main4"
        app:layout_constraintTop_toTopOf="@+id/voit_main4"
        app:srcCompat="@drawable/plus" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="119dp"
        android:layout_height="95dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voit_main4">

        <RadioButton
            android:id="@+id/voit_main_radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="익명 투표" />

        <RadioButton
            android:id="@+id/voit_main_radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="복수 투표" />
    </RadioGroup>

    <Button
        android:id="@+id/button6"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/btn_darkblue"
        android:text="@string/voit_main_btn"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>